--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 
-<app-consigna></app-consigna>
+<app-consigna *ngIf="!isReflectionRoute()"></app-consigna>
 
 <router-outlet></router-outlet>
